<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameInProgress">

	<TableLayout
		android:id="@+id/scoreTable_header"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="3dp"
		android:layout_margin="4dp"
		android:background="#013567" >
		<TableRow>
			<TextView
				android:id="@+id/header_inning"
				android:layout_width="58sp"
				android:layout_height="fill_parent"
				android:paddingLeft="1dp"
				android:paddingRight="1dp"
				android:gravity="center"
				android:background="#fff"
				android:text="inning" />

			<TextView
				android:id="@+id/header_p1"
				android:layout_width="wrap_content"
				android:layout_margin="1dp"
                android:layout_weight="1"
				android:background="#fff"
				android:gravity="center_horizontal" />

            <TextView
				android:id="@+id/header_p2"
				android:layout_width="wrap_content"
				android:layout_margin="1dp"
                android:layout_weight="1"
				android:background="#fff"
				android:gravity="center_horizontal" />
		</TableRow>
	</TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_throws_table"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scoreTable_header"
        />

    <ImageView 
    	android:id="@+id/gip_dead_high"
    	android:layout_height="4dp"
    	android:layout_width = "185dp"
    	android:layout_alignParentStart="true"
    	android:layout_below="@id/rv_throws_table"
    	android:layout_marginLeft="24dp"
		android:layout_marginRight="24dp"
    	android:background="#00FF00"
    	/>
    
    <ImageView 
    	android:id="@+id/gip_dead_left"
    	android:layout_height="210dp"
    	android:layout_width = "4dp"
    	android:layout_alignParentStart="true"
    	android:layout_below="@id/gip_dead_high"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	android:background="#00FF00"
    	/>

    <ImageButton
        android:id="@+id/gip_button_high"
        android:src="@drawable/btn_high"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_toEndOf="@id/gip_dead_left"
        android:layout_below="@id/gip_dead_high"
        android:onClick="throwTypePressed"
        android:paddingStart="85dp"
        android:contentDescription="high" />
    
    <ImageButton
        android:id="@+id/gip_button_trap"
        android:src="@drawable/btn_trap"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_toEndOf="@id/gip_button_high"
        android:layout_below="@id/gip_dead_high"
        android:onClick="throwTypePressed"
        android:padding="10dp"
        android:contentDescription="trap" />

    <ImageButton
        android:id="@+id/gip_button_left"
        android:src="@drawable/btn_left"
        android:layout_toEndOf="@id/gip_dead_left"
        android:layout_below="@id/gip_button_high"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="throwTypePressed"
        android:text="@string/gip_ballLeft_button"
        android:contentDescription="left" />

    <ImageButton
        android:id="@+id/gip_button_strike"
        android:src="@drawable/btn_strike"
        android:layout_toEndOf="@id/gip_button_left"
        android:layout_below="@id/gip_button_high"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_gravity="fill_horizontal"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"                
        android:onClick="throwTypePressed"
        android:text="@string/gip_strike_button"
        android:contentDescription="strike" />
    
    <ImageButton
        android:id="@+id/gip_button_right"
        android:src="@drawable/btn_right"
        android:layout_toEndOf="@id/gip_button_strike"
        android:layout_below="@id/gip_button_high"
        android:layout_width="65dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="throwTypePressed"
        android:text="@string/gip_ballRight_button"
        android:contentDescription="right" />
    
    <ImageButton
        android:id="@+id/gip_button_low"
        android:src="@drawable/btn_low"
        android:layout_toEndOf="@id/gip_dead_left"
        android:layout_below="@id/gip_button_strike"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:paddingStart="85dp"
        android:onClick="throwTypePressed"
        android:contentDescription="low" />
    
    <ImageButton
        android:id="@+id/gip_button_short"
        android:src="@drawable/btn_short"
        android:layout_toEndOf="@id/gip_button_low"
        android:layout_below="@id/gip_button_strike"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:padding="10dp"
        android:onClick="throwTypePressed"
        android:contentDescription="low" />
    
    <ImageView 
    	android:id="@+id/gip_dead_right"
    	android:layout_height="210dp"
    	android:layout_width = "4dp"
    	android:layout_toEndOf="@id/gip_button_right"
    	android:layout_below="@id/gip_dead_high"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	android:layout_marginEnd="10dp"
    	android:background="#00FF00"
    	/>
    
    <ImageView 
    	android:id="@+id/gip_dead_low"
    	android:layout_height="4dp"
    	android:layout_width = "185dp"
    	android:layout_alignParentStart="true"
    	android:layout_below="@id/gip_button_low"
    	android:layout_marginLeft="24dp"
    	android:layout_marginRight="24dp"
    	android:layout_marginBottom="10dp"
    	android:background="#00FF00"
    	/>
    
    <ImageButton
        android:id="@+id/gip_button_pole"
        android:src="@drawable/btn_pole"
        android:layout_toEndOf="@id/gip_dead_left"
        android:layout_below="@id/gip_dead_low"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:onClick="throwTypePressed"
        android:contentDescription="pole" />
	
    <ImageButton
        android:id="@+id/gip_button_cup"
        android:src="@drawable/btn_cup"
        android:layout_toEndOf="@id/gip_button_pole"
        android:layout_below="@id/gip_dead_low"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:onClick="throwTypePressed"
        android:contentDescription="cup" />
    
	<ImageButton
        android:id="@+id/gip_button_bottle"
        android:src="@drawable/btn_bottle"
        android:layout_toEndOf="@id/gip_button_cup"
        android:layout_below="@id/gip_dead_low"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:onClick="throwTypePressed"
        android:contentDescription="bottle" />
    
	<ImageView 
    	android:id="@+id/gip_na_indicatorL"
    	android:layout_height="4dp"
    	android:layout_width = "120dp"
    	android:layout_toEndOf="@id/gip_dead_right"
    	android:layout_below="@id/rv_throws_table"
    	android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
    	android:background="#00FF00"
    	/>
	
     <NumberPicker
         android:id="@+id/numPicker_catch"
         android:layout_toEndOf="@id/gip_dead_right"
         android:layout_below="@+id/gip_na_indicatorL"
         android:layout_width="205dp"
         android:layout_height="120dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp" />
     
     <ImageView 
    	android:id="@+id/gip_na_indicatorR"
    	android:layout_height="4dp"
    	android:layout_width = "120dp"
    	android:layout_toEndOf="@id/gip_dead_right"
    	android:layout_below="@id/numPicker_catch"
    	android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
    	android:background="#00FF00"
    	/>

    <Button
        android:id="@+id/gip_ownGoal"
        android:layout_toEndOf="@id/gip_dead_right"
        android:layout_below="@id/gip_na_indicatorR"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="OwnGoalDialog"
        android:text="OG"
        android:contentDescription="ownGoal" />
    
    <Button
        android:id="@+id/gip_playerError"
        android:layout_toEndOf="@id/gip_ownGoal"
        android:layout_below="@id/gip_na_indicatorR"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="PlayerErrorDialog"
        android:text="Err"
        android:contentDescription="playerError" />
    
    <ToggleButton
        android:id="@+id/gip_toggle_fire"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/gip_ownGoal"
        android:layout_alignEnd="@id/gip_ownGoal"
        android:layout_below="@id/gip_ownGoal"
        android:layout_marginTop="17dp"
        android:text="Fire"
        android:textOff="Fire"
        android:textOn="Fire"
        android:onClick="fireButtonPressed" />

    <Button
        android:id="@+id/gip_button_fired_on"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/gip_playerError"
        android:layout_alignEnd="@id/gip_playerError"
        android:layout_below="@id/gip_playerError"
        android:onClick="firedOnPressed"
        android:layout_marginTop="17dp"
        android:text="Fired On" />

</RelativeLayout>